Fixed outline being too wide on first social button on tab focus

--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -82,6 +82,10 @@
       color: #bbb
       text-decoration: none
 
+      &:first-child
+        margin-right: 8px
+        letter-spacing: -0.086em
+
       i
         transition: transform 400ms ease-in-out
 
